--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,8 +7,8 @@
         
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
-            <span class="me-3"><a href="#" style="color: white;">Ücretsiz Üye OL</a></span>
-            <button type="button" class="btn btn-outline-light btn-rounded">
+            <span class="me-3"><a href="#" style="color: white;" routerLink="/register">Ücretsiz Üye OL</a></span>
+            <button type="button" class="btn btn-outline-light btn-rounded" routerLink="/login" >
               Giriş Yap
             </button>
           </p>
