--- a/src/app/components/ders/ders.component.html
+++ b/src/app/components/ders/ders.component.html
@@ -17,8 +17,7 @@
     <!-- Navbar Search-->
     <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
         <div class="input-group">
-            <input class="form-control" type="text" placeholder="Arama Yap..." aria-label="Arama Yap..." aria-describedby="btnNavbarSearch" />
-            <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+            
             <ul class="navbar-nav ">
                 <button type="button" class="btn btn-dark btn-rounded mx-1 disabled" >
                   
@@ -55,11 +54,11 @@
                     </div>
                     <div class="sb-sidenav-menu-heading"></div>
                     <a class="nav-link" href="charts.html">
-                        <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                        <div class="sb-nav-link-icon"></div>
                         
                     </a>
                     <a class="nav-link" href="tables.html">
-                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        <div class="sb-nav-link-icon"></div>
                         
                     </a>
                 </div>
